--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Coursera Test!</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
 	<h1>Coursera test!</h1>
