Modified index and Add code to the form

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,12 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>Coursera test!</h1>
+	<h1>My First Page</h1>
+	<form action="action.php" method="POST">
+		<div><label>Name:</label>
+		<input type="text" size="10px" name="fname">
+		</div><br />
+		<div><button type="submit" name="btnSave">Save</button></div>
+	</form>
 </body>
 </html>
