Applied additional changes

--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,6 @@ ul{
 	list-style-type:none;/* will remove the bullet list*/
 	margin:0;/* remove browser default settings*/
 	padding:0;/* remove browser default settings*/
-	background-color: #dddddd;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -39,7 +38,7 @@ li a:hover {/*Change the link color on hover*/
 }
 
 .active{
-   background-color: #04AA6D;
+   background-color: #008B8B;
   color: white;
 }
 
@@ -48,13 +47,24 @@ li a:hover {/*Change the link color on hover*/
   ul.topnav li {float: none;}
 }
 
+.bradio{
+	border-radius: 25px;
+	border:2px solid darkcyan;
+	padding: 20px;
+}
+
 </style>
 <body>
+	<!-- navigation bar starts here-->
 <ul class="active">
 	<li style="float: right;"><a href="login.html" >Login</a></li>
 	<li style="float: right;"><a href="#">About me</a></li>
 	<li style="float: right;"><a href="#">Contact us</a></li>
 	<li style="float: right;"><a href="#">Home</a></li>
 </ul>
+<!-- navigation bar ends here-->
+
+<div style="margin-top: 100px;" class="bradio"><center>
+	<h1>Welcome to my Landing Page</h1></center></div>
 </body>
 </html>
