--- a/site/login.html
+++ b/site/login.html
@@ -2,11 +2,29 @@
 <html>
 <meta charset="utf-8">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta http-equiv = "refresh" content = "120; url = index.html" />
+
+
 	<title>Welcome to Login Page.</title>
 </head>
-<body>
+
+<style type="text/css">
+	.border1{
+		border-radius: 25px;
+		border:2px solid darkcyan;
+		border-width: 10px;
+		padding: 10px;
+		margin-block: 50px;
+		margin-top: 200px;
+		margin-left: 360px;
+		margin-right: 360px;
+
+		
+
+	}
+</style>
+
+<body class="border1">
 <div align="center">
 	<h1 style="color: darkcyan;">LOGIN PAGE</h1>
 	<form action="login.html" method="POST">
